--- a/views/scss/variables/_animations.scss
+++ b/views/scss/variables/_animations.scss
@@ -70,3 +70,16 @@ $transition-bezier-secondary: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
     transform: scaleX(1) scaleY(1);
   }
 }
+
+@mixin loading-circle {
+  animation: loading-circle 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite;
+}
+
+@keyframes loading-circle {
+  0% {
+    transform: rotate3d(0, 0, 25, 0deg);
+  }
+  100% {
+    transform: rotate3d(0, 10, 25, 360deg);
+  }
+}
